{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 206,
  "lineage": "3e2b766c-394e-6d97-32d7-d128e407d75f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "srvr1_to_srvr2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-020009c4bf0032dd93322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-020009c4bf0032dd9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00a6b0dbff3f88e32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.srvr1_to_srvr2",
            "module.srvr-1.aws_internet_gateway.hellocloud",
            "module.srvr-1.aws_route_table.hellocloud",
            "module.srvr-1.aws_vpc.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "srvr2_to_srvr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e0f7b46e5458b6eb179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e0f7b46e5458b6eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00a6b0dbff3f88e32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.srvr1_to_srvr2",
            "module.srvr-1.aws_vpc.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_internet_gateway.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_route_table.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "srvr1_to_srvr2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00a6b0dbff3f88e32",
            "peer_owner_id": "684909422213",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-025d87839344687e3",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-040855b4ab63ee97a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-1.aws_vpc.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf0e5caff29e4511",
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:elastic-ip/eipalloc-0bf0e5caff29e4511",
            "association_id": "eipassoc-009d5d456e6b54de2",
            "domain": "vpc",
            "id": "eipalloc-0bf0e5caff29e4511",
            "instance": "i-043cca88cacad6775",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-05ea94a404fada391",
            "private_dns": "ip-10-0-10-218.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.218",
            "public_dns": "ec2-47-130-66-92.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.66.92",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-1.aws_instance.hellocloud",
            "module.srvr-1.aws_key_pair.hellocloud",
            "module.srvr-1.aws_security_group.hellocloud",
            "module.srvr-1.aws_subnet.hellocloud",
            "module.srvr-1.aws_vpc.hellocloud",
            "module.srvr-1.data.aws_ami.ubuntu",
            "module.srvr-1.tls_private_key.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e7e250e7e3deb9b",
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:instance/i-043cca88cacad6775",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043cca88cacad6775",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "khs-ssh-key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ea94a404fada391",
            "private_dns": "ip-10-0-10-218.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.218",
            "public_dns": "ec2-47-128-221-169.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.221.169",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0395dde2c2af6dd6c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08aa2219bc4fb7e6a",
            "tags": {
              "Department": "devops",
              "Name": "khs-hellocloud-instance"
            },
            "tags_all": {
              "Department": "devops",
              "Name": "khs-hellocloud-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0153a7712ec9496c6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-1.aws_key_pair.hellocloud",
            "module.srvr-1.aws_security_group.hellocloud",
            "module.srvr-1.aws_subnet.hellocloud",
            "module.srvr-1.aws_vpc.hellocloud",
            "module.srvr-1.data.aws_ami.ubuntu",
            "module.srvr-1.tls_private_key.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:internet-gateway/igw-05beda34c0a027605",
            "id": "igw-05beda34c0a027605",
            "owner_id": "684909422213",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "khs-internet-gateway"
            },
            "tags_all": {
              "Name": "khs-internet-gateway"
            },
            "vpc_id": "vpc-025d87839344687e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-1.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:route-table/rtb-020009c4bf0032dd9",
            "id": "rtb-020009c4bf0032dd9",
            "owner_id": "684909422213",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05beda34c0a027605",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025d87839344687e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-1.aws_internet_gateway.hellocloud",
            "module.srvr-1.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfa6bc67feb5ef99",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-020009c4bf0032dd9",
            "subnet_id": "subnet-08aa2219bc4fb7e6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-1.aws_internet_gateway.hellocloud",
            "module.srvr-1.aws_route_table.hellocloud",
            "module.srvr-1.aws_subnet.hellocloud",
            "module.srvr-1.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:security-group/sg-0153a7712ec9496c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0153a7712ec9496c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "khs-security-group",
            "name_prefix": "",
            "owner_id": "684909422213",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "khs-security-group"
            },
            "tags_all": {
              "Name": "khs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-025d87839344687e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "684909422213",
            "id": "sg-0153a7712ec9496c6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.srvr-1.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:subnet/subnet-08aa2219bc4fb7e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aa2219bc4fb7e6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684909422213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "name": "khs-subnet"
            },
            "tags_all": {
              "name": "khs-subnet"
            },
            "vpc_id": "vpc-025d87839344687e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-1.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hellocloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:vpc/vpc-025d87839344687e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0397bd46b990435ed",
            "default_route_table_id": "rtb-0c1ca388072b9a447",
            "default_security_group_id": "sg-0223ead806de75be4",
            "dhcp_options_id": "dopt-004817a00ac7da715",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025d87839344687e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1ca388072b9a447",
            "owner_id": "684909422213",
            "region": "ap-southeast-1",
            "tags": {
              "environment": "Production",
              "name": "khs-vpc-ap-southeast-1"
            },
            "tags_all": {
              "environment": "Production",
              "name": "khs-vpc-ap-southeast-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_eip",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d128bbde99e1eb6",
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:elastic-ip/eipalloc-08d128bbde99e1eb6",
            "association_id": "eipassoc-0a9c21e323d8802c4",
            "domain": "vpc",
            "id": "eipalloc-08d128bbde99e1eb6",
            "instance": "i-0d598d834a51cc7aa",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-00052642174e5e448",
            "private_dns": "ip-10-1-10-215.ap-southeast-1.compute.internal",
            "private_ip": "10.1.10.215",
            "public_dns": "ec2-175-41-149-170.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "175.41.149.170",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-2.module.my-app-aws.aws_instance.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_key_pair.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_security_group.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_subnet.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud",
            "module.srvr-2.module.my-app-aws.data.aws_ami.ubuntu",
            "module.srvr-2.module.my-app-aws.tls_private_key.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e7e250e7e3deb9b",
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:instance/i-0d598d834a51cc7aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d598d834a51cc7aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "khs_2-ssh-key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00052642174e5e448",
            "private_dns": "ip-10-1-10-215.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.215",
            "public_dns": "ec2-18-143-146-177.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.146.177",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0afc7ef54dac229ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddcf2e7fb6f71ac7",
            "tags": {
              "Department": "devops",
              "Name": "khs_2-hellocloud-instance"
            },
            "tags_all": {
              "Department": "devops",
              "Name": "khs_2-hellocloud-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6f36022f495c353"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-2.module.my-app-aws.aws_key_pair.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_security_group.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_subnet.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud",
            "module.srvr-2.module.my-app-aws.data.aws_ami.ubuntu",
            "module.srvr-2.module.my-app-aws.tls_private_key.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:internet-gateway/igw-06bfc553f4d00795f",
            "id": "igw-06bfc553f4d00795f",
            "owner_id": "684909422213",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "khs_2-internet-gateway"
            },
            "tags_all": {
              "Name": "khs_2-internet-gateway"
            },
            "vpc_id": "vpc-040855b4ab63ee97a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:route-table/rtb-0e0f7b46e5458b6eb",
            "id": "rtb-0e0f7b46e5458b6eb",
            "owner_id": "684909422213",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bfc553f4d00795f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-040855b4ab63ee97a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-2.module.my-app-aws.aws_internet_gateway.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e88515f7ce4a8094",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e0f7b46e5458b6eb",
            "subnet_id": "subnet-0ddcf2e7fb6f71ac7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-2.module.my-app-aws.aws_internet_gateway.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_route_table.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_subnet.hellocloud",
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:security-group/sg-0b6f36022f495c353",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6f36022f495c353",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "khs_2-security-group",
            "name_prefix": "",
            "owner_id": "684909422213",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "khs_2-security-group"
            },
            "tags_all": {
              "Name": "khs_2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-040855b4ab63ee97a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "684909422213",
            "id": "sg-0b6f36022f495c353",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:subnet/subnet-0ddcf2e7fb6f71ac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddcf2e7fb6f71ac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684909422213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "name": "khs_2-subnet"
            },
            "tags_all": {
              "name": "khs_2-subnet"
            },
            "vpc_id": "vpc-040855b4ab63ee97a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.srvr-2.module.my-app-aws.aws_vpc.hellocloud"
          ]
        }
      ]
    },
    {
      "module": "module.srvr-2.module.my-app-aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hellocloud",
      "provider": "module.srvr-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:684909422213:vpc/vpc-040855b4ab63ee97a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-025dda905d536c700",
            "default_route_table_id": "rtb-044ab3e7f72ded32e",
            "default_security_group_id": "sg-0943551ef67c8085a",
            "dhcp_options_id": "dopt-004817a00ac7da715",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040855b4ab63ee97a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044ab3e7f72ded32e",
            "owner_id": "684909422213",
            "region": "ap-southeast-1",
            "tags": {
              "environment": "Production",
              "name": "khs_2-vpc-ap-southeast-1"
            },
            "tags_all": {
              "environment": "Production",
              "name": "khs_2-vpc-ap-southeast-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}